src/test/deca/context/valid/test_while.deca
// Description:
//    programme avec condition.
//
// Resultats:
//    affichage de hello
//
// Historique:
//    cree le 01/01/2024

{
boolean state = true;
while(state){
    print("hello");
    state = false;
}
}
