src/test/deca/context/invalid/wobj/test_while_float.deca
// Description:
//    programme avec condition.
//
// Resultats:
//    ligne 12 : Votre condition doit etre de type boolean
//
// Historique:
//    cree le 01/01/2024

{
float x = 1.0;
while(x){
    print("valid");
}
}
